--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,21 @@
 
-# Created by https://www.gitignore.io/api/java,gradle,intellij
+# Created by https://www.gitignore.io/api/git,java,gradle,intellij
+# Edit at https://www.gitignore.io/?templates=git,java,gradle,intellij
+
+### Git ###
+# Created by git for backups. To disable backups in Git:
+# $ git config --global mergetool.keepBackup false
+*.orig
+
+# Created by git when using merge tools for conflicts
+*.BACKUP.*
+*.BASE.*
+*.LOCAL.*
+*.REMOTE.*
+*_BACKUP_*.txt
+*_BASE_*.txt
+*_LOCAL_*.txt
+*_REMOTE_*.txt
 
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
@@ -14,7 +30,6 @@
 
 # Generated files
 .idea/**/contentModel.xml
-*.png
 
 # Sensitive or high-churn files
 .idea/**/dataSources/
@@ -67,6 +82,9 @@ fabric.properties
 # Editor-based Rest Client
 .idea/httpRequests
 
+# Android studio 3.1+ serialized cache file
+.idea/caches/build_file_checksums.ser
+
 ### Intellij Patch ###
 # Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
 
@@ -105,7 +123,7 @@ hs_err_pid*
 
 ### Gradle ###
 .gradle
-/build/
+build/
 
 # Ignore Gradle GUI config
 gradle-app.setting
@@ -119,5 +137,7 @@ gradle-app.setting
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
 
+### Gradle Patch ###
+**/build/
 
-# End of https://www.gitignore.io/api/java,gradle,intellij
+# End of https://www.gitignore.io/api/git,java,gradle,intellij
