--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
+.idea/codeStyles/Project.xml
 
 # Generated files
 .idea/**/contentModel.xml
