--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'java'
+    id 'application'
 }
+
+mainClassName = 'evolver.Application'
 
 group 'com.kemling'
 version '1.0-SNAPSHOT'
